Fix contrast issue for toggle button

--- a/css/default.css
+++ b/css/default.css
@@ -94,6 +94,7 @@ header {
 	height: 1.5rem;
 	border: none;
 	background: url(../assets/shared/icon-hamburger.svg) center / contain no-repeat;
+	color: var(--color-primary-bright-blue);
 	cursor: pointer;
 	z-index: 1;
 	transition: filter 0.3s;
